-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.711 2010-02-21 21:24:33 guru Exp $
-----------------------------------------------------------------------------------------

2010-02-21	jluis
	* gmt2rgb.c:		Option -G was freeing the output name before it was even allocated.
				This crashed the Windows binary.

2010-02-20	jluis
	* gmt_init.c:		Chop off any eventual EOLs characters that might be in argv
				strings as it will happen when it was created by a shell command.
				We need this so that native Win binaries can be used in Cygwin

2010-02-15	remko
	* gmt_support.c:	Further improved internals of GMT_contour, GMT_trace_contour,
				GMT_splice_contour, significantly reducing amount of code lines.
				Removed GMT_start_contour. 

2010-02-14	remko
	* grdcontour.c:		Reverting change of 2010-01-28 because closing a contour
				crossing east-to-west or west-to-east also causes lines drawn across

2010-02-13	pwessel
	* greenspline.c:	Must insist that one of [-R -I], -N, or -T is specified.
	
2010-02-11	remko
	* gmt_support.c:	Improved the way contours on saddle points are produced.

2010-02-08	pwessel
	* gmt_plot.c:		Parallels that should be straight (e.g., in -JI) would sometimes
				appear with jump gaps.  Reported by E. Suarez 2/2/2010.

2010-02-01	remko
	* g??math.c:		Added function SQR (square).

2010-01-28	pwessel
	* grdcontour.c:		L or H color for first min/max annotation was not set
	
2010-01-26	remko
	* gmt_plot.c:		Fixed bug in GMT_plot_map_scale that could lead to endless loops
				when using scales to 100 km or any exact power of 10. Error was
				limited to 64-bit.

2010-01-24	jluis
	* meca/submeca.c:	Replaced calls to d_atan2() by d_atan2d() since the code expects 
				angles in degrees. Thanks to Dan Scheirer for finding this.  
	* meca/psmeca.c:	Removed out of place and repeated line to compute size in -a option 
	* test/meca:		More meca tests added (from src/meca)

2010-01-21	jluis